# retrograde

./: .gitattributes  .gitignore  CMakeLists.txt  readme.md  todo.txt
assets_src/config/db/: bezels.yaml  controllers.yaml  cores.yaml  mappings.yaml  screenFilters.yaml  systems.yaml
assets_src/config/strings/: retrograde-en-GB.yaml  systems-en-GB.yaml  ui-en-GB.yaml
assets_src/config/ui_style/: retrograde_ui.yaml
assets_src/image/config/: consoles.yaml  cores.yaml
assets_src/material/: radial_gradient.material  radial_gradient.yaml  smooth_pixel.material  smooth_pixel.yaml
assets_src/shader/: radial_gradient.pixel.hlsl  smooth_pixel.pixel.hlsl
assets_src/ui/: choose_game.ui  choose_game.yaml  choose_system.ui  choose_system.yaml  game_capsule.yaml  in_game_menu.ui  in_game_menu.yaml  input_config.ui  input_config.yaml  input_idle.yaml  input_slot.ui  input_slot.yaml  savestate_capsule.ui  system_capsule.yaml  system_list.yaml  timeline_point.yaml
config/: settings.yaml
gen_src/: dummy.yaml
halley_project/: asset_manifest.yaml  properties.yaml
notes/: frame_timing_144hz.txt
res/: retrograde.rc
scripts/: cmake_vs2019_64.bat  make_dist.bat
shaders/: readme.md
shaders/handheld/: retro-tiles.slangp  retro-v2-nds-color.slangp  retro-v3-nds-color.slangp  retro-v3.slangp
shaders/handheld/console-border/: gba-lcd-grid-v2.slangp  gbc-lcd-grid-v2.slangp  gbc.slangp
shaders/handheld/console-border/shader-files/: border-auto-scale.slang
shaders/sonkun/original presets/1080p/: 01-crt-guest-advanced-slotmask-neutral-rf-ntsc-2-phase.slangp  02-crt-guest-advanced-slotmask-neutral-rf-ntsc-3-phase.slangp  03-crt-guest-advanced-slotmask-neutral-composite-ntsc-2-phase.slangp  04-crt-guest-advanced-slotmask-neutral-composite-ntsc-3-phase.slangp  05-crt-guest-advanced-slotmask-neutral-s-video.slangp  06-crt-guest-advanced-slotmask-neutral-rgb.slangp  07-crt-guest-advanced-slotmask-u-warm-rf-ntsc-2-phase.slangp  08-crt-guest-advanced-slotmask-u-warm-rf-ntsc-3-phase.slangp  09-crt-guest-advanced-slotmask-u-warm-composite-ntsc-2-phase.slangp  10-crt-guest-advanced-slotmask-u-warm-composite-ntsc-3-phase.slangp  11-crt-guest-advanced-slotmask-u-warm-s-video.slangp  12-crt-guest-advanced-slotmask-u-warm-rgb.slangp  13-crt-guest-advanced-slotmask-u-cool-rf-ntsc-2-phase.slangp  14-crt-guest-advanced-slotmask-u-cool-rf-ntsc-3-phase.slangp  15-crt-guest-advanced-slotmask-u-cool-composite-ntsc-2-phase.slangp  16-crt-guest-advanced-slotmask-u-cool-composite-ntsc-3-phase.slangp  17-crt-guest-advanced-slotmask-u-cool-s-video.slangp  18-crt-guest-advanced-slotmask-u-cool-rgb.slangp  19-crt-guest-advanced-slotmask-j-warm-rf-ntsc-2-phase.slangp  20-crt-guest-advanced-slotmask-j-warm-rf-ntsc-3-phase.slangp  21-crt-guest-advanced-slotmask-j-warm-composite-ntsc-2-phase.slangp  22-crt-guest-advanced-slotmask-j-warm-composite-ntsc-3-phase.slangp  23-crt-guest-advanced-slotmask-j-warm-s-video.slangp  24-crt-guest-advanced-slotmask-j-warm-rgb.slangp  25-crt-guest-advanced-slotmask-j-cool-rf-ntsc-2-phase.slangp  26-crt-guest-advanced-slotmask-j-cool-rf-ntsc-3-phase.slangp  27-crt-guest-advanced-slotmask-j-cool-composite-ntsc-2-phase.slangp  28-crt-guest-advanced-slotmask-j-cool-composite-ntsc-3-phase.slangp  29-crt-guest-advanced-slotmask-j-cool-s-video.slangp  30-crt-guest-advanced-slotmask-j-cool-rgb.slangp  31-crt-guest-advanced-slotmask-pal-warm-rf-ntsc-2-phase.slangp  32-crt-guest-advanced-slotmask-pal-warm-rf-ntsc-3-phase.slangp  33-crt-guest-advanced-slotmask-pal-warm-composite-ntsc-2-phase.slangp  34-crt-guest-advanced-slotmask-pal-warm-composite-ntsc-3-phase.slangp  35-crt-guest-advanced-slotmask-pal-warm-s-video.slangp  36-crt-guest-advanced-slotmask-pal-warm-rgb.slangp  37-crt-guest-advanced-slotmask-pal-cool-rf-ntsc-2-phase.slangp  38-crt-guest-advanced-slotmask-pal-cool-rf-ntsc-3-phase.slangp  39-crt-guest-advanced-slotmask-pal-cool-composite-ntsc-2-phase.slangp  40-crt-guest-advanced-slotmask-pal-cool-composite-ntsc-3-phase.slangp  (+8 more)
shaders/sonkun/original presets/1440p/: 01-crt-guest-advanced-slotmask-neutral-rf-ntsc-2-phase.slangp  (+47 more)
src/config/: bezel_config.cpp  bezel_config.h  config_database.cpp  config_database.h  controller_config.cpp  controller_config.h  core_config.cpp  core_config.h  mapping_config.cpp  mapping_config.h  retrograde_config.h  screen_filter_config.cpp  screen_filter_config.h  system_config.cpp  system_config.h
src/filter_chain/: filter_chain.h  material_generator.cpp  material_generator.h  retroarch_filter_chain.cpp  retroarch_filter_chain.h  retroarch_shader_parser.cpp  retroarch_shader_parser.h  shader_compiler.cpp  shader_compiler.h  shader_converter.cpp  shader_converter.h
src/game/: game_canvas.cpp  game_canvas.h  game_stage.cpp  game_stage.h  retrograde_environment.cpp  retrograde_environment.h  retrograde_game.cpp  retrograde_game.h  system_bezel.cpp  system_bezel.h
src/libretro/: libretro_core.cpp  libretro_core.h  libretro_environment.cpp  libretro_environment.h  libretro_vfs.cpp  libretro_vfs.h  libretro_vulkan.h
src/metadata/: es_gamelist.cpp  es_gamelist.h  game_collection.cpp  game_collection.h
src/retrograde/: game_input_mapper.cpp  game_input_mapper.h  game_stage.cpp  game_stage.h  input_mapper.cpp  input_mapper.h  retrograde_environment.cpp  retrograde_environment.h  retrograde_game.cpp  retrograde_game.h  settings.cpp  settings.h
src/savestate/: rewind_data.cpp  rewind_data.h  savestate.cpp  savestate.h  savestate_collection.cpp  savestate_collection.h
src/ui/: choose_game_window.cpp  choose_game_window.h  choose_system_window.cpp  choose_system_window.h  game_canvas.cpp  game_canvas.h  in_game_menu.cpp  in_game_menu.h  input_config_widget.cpp  input_config_widget.h
src/util/: c_string_cache.h  cpu_update_texture.cpp  cpu_update_texture.h  dll.cpp  dll.h  dx11_state.cpp  dx11_state.h  image_cache.cpp  image_cache.h  opengl_interop.cpp  opengl_interop.h
src/zip/: zip_file.cpp  zip_file.h
test_cores/: CMakeLists.txt
test_cores/test/: libretro-test.c
test_cores/test_advanced/: libretro-test.c
(+113 files in other folders)
